--- a/test-output/old/Ethoca_Challenge/methods-alphabetical.html
+++ b/test-output/old/Ethoca_Challenge/methods-alphabetical.html
@@ -1,24 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Ethoca_Challenge</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="eca56e">  <td>19/01/02 18:43:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test02.SelectItem()[pri:2, instance:exercise.Test02@52f759d7]">SelectItem</td> 
-  <td>main@911312317</td>   <td></td> </tr>
-<tr bgcolor="d47cee">  <td>19/01/02 18:43:07</td>   <td>-32462</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test01.TestCase01()[pri:0, instance:exercise.Test01@46daef40]">TestCase01</td> 
-  <td>main@911312317</td>   <td></td> </tr>
-<tr bgcolor="d47cee">  <td>19/01/02 18:43:34</td>   <td>-5092</td> <td>&nbsp;</td><td title="&lt;&lt;Test01.cleanUp()[pri:0, instance:exercise.Test01@46daef40]">&lt;&lt;cleanUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@911312317</td>   <td></td> </tr>
-<tr bgcolor="eca56e">  <td>19/01/02 18:44:22</td>   <td>42647</td> <td>&nbsp;</td><td title="&lt;&lt;Test02.cleanUp()[pri:0, instance:exercise.Test02@52f759d7]">&lt;&lt;cleanUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@911312317</td>   <td></td> </tr>
-<tr bgcolor="eca56e">  <td>19/01/02 18:44:02</td>   <td>22548</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test02.enterUserDetails()[pri:4, instance:exercise.Test02@52f759d7]">enterUserDetails</td> 
-  <td>main@911312317</td>   <td></td> </tr>
-<tr bgcolor="d47cee">  <td>19/01/02 18:43:04</td>   <td>-35185</td> <td>&nbsp;</td><td title="&gt;&gt;Test01.iniTest()[pri:0, instance:exercise.Test01@46daef40]">&gt;&gt;iniTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@911312317</td>   <td></td> </tr>
-<tr bgcolor="eca56e">  <td>19/01/02 18:43:35</td>   <td>-4423</td> <td>&nbsp;</td><td title="&gt;&gt;Test02.iniTest()[pri:0, instance:exercise.Test02@52f759d7]">&gt;&gt;iniTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@911312317</td>   <td></td> </tr>
-<tr bgcolor="eca56e">  <td>19/01/02 18:43:37</td>   <td>-2375</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test02.login()[pri:1, instance:exercise.Test02@52f759d7]">login</td> 
-  <td>main@911312317</td>   <td></td> </tr>
-<tr bgcolor="eca56e">  <td>19/01/02 18:43:42</td>   <td>2481</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test02.validateProduct_Select()[pri:3, instance:exercise.Test02@52f759d7]">validateProduct_Select</td> 
-  <td>main@911312317</td>   <td></td> </tr>
-<tr bgcolor="eca56e">  <td>19/01/02 18:44:22</td>   <td>42595</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test02.validateTranPage()[pri:5, instance:exercise.Test02@52f759d7]">validateTranPage</td> 
-  <td>main@911312317</td>   <td></td> </tr>
+<tr bgcolor="729e90">  <td>19/01/05 16:10:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test02.SelectItem()[pri:2, instance:exercise.Test02@64f6106c]">SelectItem</td> 
+  <td>main@633075331</td>   <td></td> </tr>
+<tr bgcolor="6d64ab">  <td>19/01/05 16:10:07</td>   <td>-30022</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test01.TestCase01()[pri:0, instance:exercise.Test01@7a3d45bd]">TestCase01</td> 
+  <td>main@633075331</td>   <td></td> </tr>
+<tr bgcolor="6d64ab">  <td>19/01/05 16:10:32</td>   <td>-5246</td> <td>&nbsp;</td><td title="&lt;&lt;Test01.cleanUp()[pri:0, instance:exercise.Test01@7a3d45bd]">&lt;&lt;cleanUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@633075331</td>   <td></td> </tr>
+<tr bgcolor="729e90">  <td>19/01/05 16:11:20</td>   <td>43089</td> <td>&nbsp;</td><td title="&lt;&lt;Test02.cleanUp()[pri:0, instance:exercise.Test02@64f6106c]">&lt;&lt;cleanUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@633075331</td>   <td></td> </tr>
+<tr bgcolor="729e90">  <td>19/01/05 16:11:00</td>   <td>22939</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test02.enterUserDetails()[pri:4, instance:exercise.Test02@64f6106c]">enterUserDetails</td> 
+  <td>main@633075331</td>   <td></td> </tr>
+<tr bgcolor="6d64ab">  <td>19/01/05 16:10:04</td>   <td>-33111</td> <td>&nbsp;</td><td title="&gt;&gt;Test01.iniTest()[pri:0, instance:exercise.Test01@7a3d45bd]">&gt;&gt;iniTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@633075331</td>   <td></td> </tr>
+<tr bgcolor="729e90">  <td>19/01/05 16:10:33</td>   <td>-4498</td> <td>&nbsp;</td><td title="&gt;&gt;Test02.iniTest()[pri:0, instance:exercise.Test02@64f6106c]">&gt;&gt;iniTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@633075331</td>   <td></td> </tr>
+<tr bgcolor="729e90">  <td>19/01/05 16:10:35</td>   <td>-2335</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test02.login()[pri:1, instance:exercise.Test02@64f6106c]">login</td> 
+  <td>main@633075331</td>   <td></td> </tr>
+<tr bgcolor="729e90">  <td>19/01/05 16:10:40</td>   <td>2847</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test02.validateProduct_Select()[pri:3, instance:exercise.Test02@64f6106c]">validateProduct_Select</td> 
+  <td>main@633075331</td>   <td></td> </tr>
+<tr bgcolor="729e90">  <td>19/01/05 16:11:20</td>   <td>42979</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test02.validateTranPage()[pri:5, instance:exercise.Test02@64f6106c]">validateTranPage</td> 
+  <td>main@633075331</td>   <td></td> </tr>
 </table>
